--- a/style.css
+++ b/style.css
@@ -59,3 +59,10 @@ p {
   margin: 20px auto;
   max-width: 650px;
 }
+
+#OpenSourceCode {
+  display: block;
+  text-align: center;
+  margin: 10px;
+  padding: 10px;
+}
