--- a/style.css
+++ b/style.css
@@ -19,8 +19,11 @@ h4 {
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
 }
-p {
+#otherInfo {
   padding: 40px 0 0;
+  color: #42a5f5;
+  font-size: 20px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 .col-2 {
   color: #42a5f5;
@@ -59,6 +62,10 @@ p {
   padding: 20px;
   margin: 20px auto;
   max-width: 650px;
+}
+
+#weather-forecast {
+  text-align: center;
 }
 
 #OpenSourceCode {
