--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 h1 {
-  color: #1278ca;
+  color: #114b5f;
   font-size: 30px;
   font-weight: bold;
   font-family: Arial, Helvetica, sans-serif;
   padding: 10px 0;
 }
 h2 {
-  color: #42a5f5;
+  color: #1a936f;
   font-size: 10px;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -14,25 +14,25 @@ h3 {
   font-size: 70px;
 }
 h4 {
-  color: #1278ca;
+  color: #114b5f;
   font-size: 20px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
 }
 #otherInfo {
   padding: 40px 0 0;
-  color: #42a5f5;
+  color: #1a936f;
   font-size: 20px;
   font-family: Arial, Helvetica, sans-serif;
 }
 .col-2 {
-  color: #42a5f5;
+  color: #1a936f;
   font-size: 15px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
 }
 .container {
-  color: #42a5f5;
+  color: #1a936f;
 }
 .temp {
   font-size: 5px;
@@ -42,30 +42,32 @@ h4 {
 }
 #celsius-link {
   text-decoration: none;
+  color: #114b5f;
 }
 #fahrenheit-link {
   text-decoration: none;
+  color: #114b5f;
 }
 
-.day {
-  font-size: 10px;
-  font-weight: bold;
-  right: 5px;
-  left: 5px;
-}
-.emoji {
-  font-size: 60px;
-}
 .weather-app {
-  border: 1px solid;
-  border-radius: 5px;
+  background-color: #f3e9d2;
+  border-radius: 8px;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
   padding: 20px;
   margin: 20px auto;
   max-width: 650px;
 }
 
+#result {
+  box-shadow: 0 0.5rem 1rem rgb(74 77 255 / 10%);
+}
+
 #weather-forecast {
   text-align: center;
+}
+
+.min-temp {
+  opacity: 0.5;
 }
 
 #OpenSourceCode {
